fix header not visible

--- a/src/assets/styles/global.sass
+++ b/src/assets/styles/global.sass
@@ -131,7 +131,6 @@ main
   &-Animate
     opacity: 0
   &-Head
-    opacity: 0
     position: sticky
     left: 0
     top: 0
